--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -11,7 +11,7 @@ jobs:
       uses: actions/checkoutQv2
   
     - name: Run Super-Linter
-      uses: github/super-linterQv3
+      uses: github/super-linter@v3
        env:
   
           DEFAULT_BRANCH: master
