--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -14,6 +14,6 @@ jobs:
       uses: github/super-linter@v3
       env:
   
-          DEFAULT_BRANCH: master
+          DEFAULT_BRANCH: main
   
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
